[UPDATE] Review block complete

--- a/scss/theme/template-blocks/_base.scss
+++ b/scss/theme/template-blocks/_base.scss
@@ -11,3 +11,4 @@
 @import "block-image-right-section";
 @import "block-two-column-section";
 @import "block-multiple-column-button-section";
+@import "block-reviews";
