[UPDATE] update slider subheading text

--- a/scss/theme/template-blocks/_block-multiple-column-button-section.scss
+++ b/scss/theme/template-blocks/_block-multiple-column-button-section.scss
@@ -24,6 +24,10 @@
       text-align: center;
     }
 
+    .slider-subheading {
+      line-height: 26px;
+    }
+
     .capitalize {
       text-transform: capitalize;
     }
