--- a/scss/theme/template-blocks/_block-image-left-section.scss
+++ b/scss/theme/template-blocks/_block-image-left-section.scss
@@ -34,7 +34,7 @@
       }
       h2 {
         text-align: center;
-        @media (min-width: $responsive-md) {
+        @media (min-width: $responsive-lg) {
           text-align: left;
         }
       }
@@ -64,7 +64,7 @@
       }
     }
 
-    @media (min-width: $responsive-md) {
+    @media (min-width: $responsive-lg) {
       .text-container {
         // padding-left: 50px;
         text-align: left;
