[UPDATE] image right block complete

--- a/scss/theme/template-blocks/_block-image-right-section.scss
+++ b/scss/theme/template-blocks/_block-image-right-section.scss
@@ -51,7 +51,7 @@
       }
       h2 {
         text-align: center;
-        @media (min-width: $responsive-md) {
+        @media (min-width: $responsive-lg) {
           text-align: left;
         }
       }
@@ -81,7 +81,7 @@
       }
     }
 
-    @media (min-width: $responsive-md) {
+    @media (min-width: $responsive-lg) {
       .text-container {
         // padding-left: 50px;
         text-align: left;
