--- a/scss/theme/template-pages/_404.scss
+++ b/scss/theme/template-pages/_404.scss
@@ -23,6 +23,6 @@
     line-height: 29px !important;
 }
 
-.not-found-section img {
-    max-width: 239px;
+section.banner.not-found-section{
+    padding-bottom: 0 !important;
 }
