--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -1165,8 +1165,6 @@ section.banner {
   }
 }
 
-
-
 //Location - Banner
 .right-cut-off-banner {
   .banner-img-mb img {
@@ -1182,8 +1180,8 @@ section.banner {
     @media (min-width: $responsive-sm) {
       background: linear-gradient(180deg, #394357 0%, rgba(57, 67, 87, 0) 0%),
         linear-gradient(110deg, #427fdf 62%, rgba(0, 0, 0, 0) 0%),
-        url("https://wordpress-684516-2302341.cloudwaysapps.com/wp-content/uploads/2021/12/Bendigo-Hero-image-1.jpg") no-repeat right
-          center/auto 714px $color-blue;
+        url("https://wordpress-684516-2302341.cloudwaysapps.com/wp-content/uploads/2021/12/Bendigo-Hero-image-1.jpg")
+          no-repeat right center/auto 714px $color-blue;
       background-position: 59%;
     }
 
@@ -1191,8 +1189,8 @@ section.banner {
       min-height: auto;
       background: linear-gradient(180deg, #394357 0%, rgba(57, 67, 87, 0) 0%),
         linear-gradient(110deg, #427fdf 62%, rgba(0, 0, 0, 0) 0%),
-        url("https://wordpress-684516-2302341.cloudwaysapps.com/wp-content/uploads/2021/12/Bendigo-Hero-image-1.jpg") no-repeat right
-          center/auto 714px $color-blue;
+        url("https://wordpress-684516-2302341.cloudwaysapps.com/wp-content/uploads/2021/12/Bendigo-Hero-image-1.jpg")
+          no-repeat right center/auto 714px $color-blue;
       background-size: cover;
       background-position: 52%;
     }
@@ -1202,7 +1200,7 @@ section.banner {
     }
 
     h1 {
-      @media(max-width: $responsive-sm){
+      @media (max-width: $responsive-sm) {
         padding: 2rem;
       }
       + p {
@@ -1216,6 +1214,89 @@ section.banner {
           margin-top: 20px;
           margin-bottom: 0px;
         }
+      }
+    }
+  }
+}
+
+.page-contact,
+.page-template-thank-you {
+  section.banner {
+    padding-bottom: 40px;
+    background-position: top center;
+    background-size: cover;
+
+    .fp-btn {
+      padding: 15px;
+      width: 100%;
+    }
+
+    .form-group {
+      max-width: 674px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      text-align: center;
+      letter-spacing: normal;
+    }
+
+    @media (min-width: $responsive-md) {
+      padding-bottom: 85px;
+
+      h1 {
+        font-size: 42px;
+        line-height: 54px;
+        text-align: center;
+        margin-bottom: 30px;
+      }
+
+      .fp-btn {
+        padding: 15px 30px;
+      }
+    }
+
+    @media (min-width: $responsive-md) {
+      .quote-form {
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+}
+
+.page-template-thank-you {
+  section.banner .form-thankyou {
+    display: block;
+    text-align: center;
+    max-width: 850px;
+    margin: 0 auto;
+    h1 {
+      @media (min-width: $responsive-md) {
+        font-size: 52px;
+        line-height: 46px;
+        letter-spacing: normal;
+      }
+    }
+    h2 {
+      font-size: 25px;
+      line-height: 30px;
+      padding: 0 15px;
+      @media (min-width: $responsive-md) {
+        font-size: 36px;
+        line-height: 41px;
+      }
+    }
+    P {
+      font-size: 16px;
+      line-height: 20px;
+      @media (min-width: $responsive-md) {
+        font-size: 20px;
+        line-height: 25px;
+      }
+      a {
+        color: #fff;
+        font-weight: 700;
       }
     }
   }
