Update banner for right cut off

--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -1167,6 +1167,7 @@ section.banner {
 
 //Location - Banner
 .right-cut-off-banner {
+  background: #427FDF;
   .banner-img-mb img {
     width: 114%;
     margin-left: -14px;
