[UPDATE] Home page fixed

--- a/scss/theme/template-blocks/_block-image-right-section.scss
+++ b/scss/theme/template-blocks/_block-image-right-section.scss
@@ -9,6 +9,7 @@
       padding-left: 36px; /* the width of your image + some space */
       margin: 10px 0;
       line-height: 26px;
+      background-position: left;
       text-align: left;
 
       a {
