[UPDATE] Who we are map section

--- a/scss/theme/template-pages/_who-we-are.scss
+++ b/scss/theme/template-pages/_who-we-are.scss
@@ -16,6 +16,12 @@
   section.section-paragraph .image-container-left {
     text-align: center;
   }
+  section.section-paragraph .image-container-right {
+    text-align: center;
+  }
+  section.section-paragraph .text-container {
+    padding: 0 15px;
+  }
   .awardDes p {
     font-size: 18px;
   }
