--- a/scss/theme/template-pages/_who-we-are.scss
+++ b/scss/theme/template-pages/_who-we-are.scss
@@ -22,6 +22,13 @@
   section.section-paragraph .text-container {
     padding: 0 15px;
   }
+  .section-blue {
+    color: #ffffff;
+    background: #427fe0 linear-gradient(0deg, #427fdf 0%, #396bb1 100%);
+    a {
+      color: #ffffff;
+    }
+  }
   .awardDes p {
     font-size: 18px;
   }
