--- a/scss/theme/template-pages/_who-we-are.scss
+++ b/scss/theme/template-pages/_who-we-are.scss
@@ -29,6 +29,24 @@
       color: #ffffff;
     }
   }
+  .image-container-left {
+    text-align: center;
+    @media (min-width: 1980px) {
+      text-align: right;
+      + .text-container {
+        padding-left: 100px !important;
+        max-width: 670px;
+      }
+    }
+  }
+
+  .image-container-right {
+    text-align: center;
+    @media (min-width: 1980px) {
+      text-align: left;
+      padding-left: 100px;
+    }
+  }
   .awardDes p {
     font-size: 18px;
   }
