[UPDATE] who we are images

--- a/scss/theme/template-blocks/_block-case-study.scss
+++ b/scss/theme/template-blocks/_block-case-study.scss
@@ -43,6 +43,14 @@
         margin: 0 1px;
       }
     }
+    .seo-new-case-study-content {
+      font-size: 54px;
+      line-height: 63px;
+      text-align: left;
+    }
+    .seo-new-case-study-content span {
+      font-weight: 600;
+    }
 
     .stats {
       width: auto;
