--- a/scss/theme/template-pages/_who-we-are.scss
+++ b/scss/theme/template-pages/_who-we-are.scss
@@ -353,8 +353,8 @@
 }
 
 .group-image {
-  max-width: 1205px !important;
-  @media (max-width: 1215px) {
+  max-width: 1245px;
+  @media (max-width: 1250px) {
     max-width: 100%;
   }
 }
