[UPDATE] who we are page fix

--- a/scss/theme/template-pages/_who-we-are.scss
+++ b/scss/theme/template-pages/_who-we-are.scss
@@ -23,6 +23,11 @@
       }
     }
   }
+  @media (min-width: 576px) {
+    section.section-paragraph .text-container {
+      max-width: 570px;
+    }
+  }
   section.section-paragraph .image-container-right {
     text-align: center;
     @media (min-width: 1980px) {
