[UPDATE] footer navigation

--- a/scss/theme/template/footer/_footer.scss
+++ b/scss/theme/template/footer/_footer.scss
@@ -347,3 +347,13 @@ section.copyright {
     }
   }
 }
+
+#menu-footer-services-menu {
+  list-style: none;
+  padding: 0;
+}
+
+#menu-footer-company-menu-container {
+  list-style: none;
+  padding: 0;
+}
