[UPDATE] services carousel update text margins

--- a/scss/theme/template-blocks/_block-multiple-column-button-section.scss
+++ b/scss/theme/template-blocks/_block-multiple-column-button-section.scss
@@ -129,6 +129,9 @@
     .container {
       max-width: 1200px;
     }
+    .section-title {
+      margin-bottom: 0px !important;
+    }
     .slick-prev {
       width: 56px !important;
       height: 56px !important;
