--- a/scss/theme/template/footer/_footer.scss
+++ b/scss/theme/template/footer/_footer.scss
@@ -353,7 +353,17 @@ section.copyright {
   padding: 0;
 }
 
+#menu-footer-services-menu-1 {
+  list-style: none;
+  padding: 0;
+}
+
 #menu-footer-company-menu {
+  list-style: none;
+  padding: 0;
+}
+
+#menu-footer-company-menu-1 {
   list-style: none;
   padding: 0;
 }
