--- a/scss/theme/template-pages/_thank-you.scss
+++ b/scss/theme/template-pages/_thank-you.scss
@@ -123,3 +123,68 @@ section.section-office-hours {
     }
   }
 }
+.page-template-thank-you {
+  section.banner {
+    padding-bottom: 40px;
+    background-image: url("assets/img/img_contact_us_header_mob.jpg");
+    background-position: top center;
+    background-size: cover;
+
+    .fp-btn {
+      padding: 15px;
+      width: 100%;
+    }
+    .contact-page-review-row {
+      margin-bottom: 15px;
+      width: 90%;
+      margin: auto !important;
+    }
+
+    .contact-page-review-row .text {
+      font-size: 20px;
+    }
+
+    .contact-page-review-row .text:before,
+    .contact-page-review-row .text:after {
+      content: none !important;
+    }
+
+    .contact-us-form .row > div {
+      margin-bottom: 15px;
+    }
+
+    .form-group {
+      max-width: 674px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      text-align: center;
+      letter-spacing: normal;
+    }
+
+    @media (min-width: $responsive-md) {
+      padding-bottom: 85px;
+      background-image: url("assets/img/img_contact_us_header.jpg");
+
+      h1 {
+        font-size: 42px;
+        line-height: 54px;
+        text-align: center;
+        margin-bottom: 30px;
+      }
+
+      .fp-btn {
+        padding: 15px 30px;
+        // width: auto;
+      }
+    }
+
+    @media (min-width: $responsive-md) {
+      .quote-form {
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+}
