[UPDATE] contact padding fix

--- a/scss/theme/template-pages/_thank-you.scss
+++ b/scss/theme/template-pages/_thank-you.scss
@@ -144,6 +144,10 @@ section.section-office-hours {
       font-size: 19px;
     }
 
+    section.banner .testimonial .text {
+      padding: 0 20px !important;
+    }
+
     .contact-page-review-row .text:before,
     .contact-page-review-row .text:after {
       content: none !important;
