--- a/scss/theme/template-pages/_thank-you.scss
+++ b/scss/theme/template-pages/_thank-you.scss
@@ -130,6 +130,10 @@ section.section-office-hours {
     background-position: top center;
     background-size: cover;
 
+    .fp-btn {
+      padding: 15px;
+      width: 100%;
+    }
     .contact-page-review-row {
       margin-bottom: 15px;
       width: 90%;
