--- a/scss/theme/template-pages/_careers.scss
+++ b/scss/theme/template-pages/_careers.scss
@@ -527,3 +527,9 @@ section.section-why-first-page {
   background-color: #ffffff;
   box-shadow: 2px 4px 10px 0 rgb(0 0 0 / 30%);
 }
+
+.related-articles ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+}
