[UPDATE] casestudy desktop image

--- a/scss/theme/template-blocks/_block-case-study.scss
+++ b/scss/theme/template-blocks/_block-case-study.scss
@@ -58,6 +58,8 @@
       border-radius: 5px;
       background: linear-gradient(225deg, #427fdf 0%, #396bb1 100%);
       color: $color-white;
+      position: relative;
+      z-index: -1;
 
       .stat {
         width: 100%;
