[UPDATE] default banner description area

--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -83,6 +83,10 @@
     letter-spacing: 1.73px;
   }
 
+  section.banner .main-text {
+    max-width: 216px !important;
+  }
+
   section.banner .banner-description {
     position: relative;
   }
