[UPDATE] default banner padding

--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -85,6 +85,7 @@
 
   section.banner .main-text {
     max-width: 216px !important;
+    padding: 0 5px !important;
   }
 
   section.banner .banner-description {
