--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -1366,3 +1366,10 @@ section.banner {
     }
   }
 }
+
+ul.parsley-errors-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 5px 0 0;
+  font-size: 12px;
+}
