[UPDATE] ipad banner width

--- a/scss/theme/template-parts/banner/_banner.scss
+++ b/scss/theme/template-parts/banner/_banner.scss
@@ -1006,11 +1006,11 @@ section.banner {
   }
 }
 
-@media (min-width: 768px) and(max-width: 991px) {
-  .quote-form.quote-form-big {
-    width: 600px;
-  }
-}
+// @media (min-width: 768px) and(max-width: 991px) {
+//   .quote-form.quote-form-big {
+//     width: 600px;
+//   }
+// }
 
 @media (max-width: 767px) {
   .hero-mobile {
